src/index.css
body {
	font-family: 'Montserrat', sans-serif;
	line-height: 1.6;
	margin: 0;
}
html, body {
  overflow-x: hidden;
}
body {
  position: relative
}
ul {
  margin: 0;
  padding: 0;
  list-style: none;
}


h2,
h3,
a {
	color: #34495e;
}

a {
	text-decoration: none;
}



.logo {
	margin: 0;
	font-size: 1.45em;
}

.main-nav {
	margin-top: 5px;
}

.logo a,
.main-nav a {
	padding: 10px 15px;
	text-transform: uppercase;
	text-align: center;
	display: block;
}

.main-nav a {
	color: #34495e;
	font-size: .99em;
}

.main-nav a:hover {
	color: #718daa;
}



.header {
	position: fixed;
 	top: 0;
	width: 100%;
	opacity: 1;
	z-index: 5;
	padding-top: .5em;
	padding-bottom: .5em;
	border: 1px solid #a2a2a2;
	background-color: #f4f4f4;
	-webkit-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
	-moz-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
	box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
	-webkit-border-radius: 5px;
	-moz-border-radius: 5px;
	border-radius: 5px;
}


/* =================================
  Media Queries
==================================== */




@media (min-width: 769px) {
	.header,
	.main-nav {
		display: flex;
	}
	.header {
		flex-direction: column;
		align-items: center;
    	.header{
		width: 80%;
		margin: 0 auto;
		max-width: 1150px;
	}
	}

}

@media (min-width: 1025px) {
	.header {
		flex-direction: row;
		justify-content: space-between;
	}

}


.hero {
  width: 100%;
	padding-top: 75px;
	display: flex;
	justify-content: center;
}

.landingphoto {
  height: 700px;
  width: 1700px;
	border-radius: 40px;
	margin-bottom: 20px;
	padding-top: 20px;
}

@media screen and (width <= 700px) {
  .landingphoto {
    height: 500px;
		width: 100%;
  }
}

.photogrid{
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
  gap: 2rem;
	padding-left: 20px;
	padding-right: 20px;
}

.img-container {
	z-index: 1;
	position: relative;
}

.album-text {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  z-index: 2;
  font-size: 80px;
	color: #fff;
	text-shadow: 0 0 1.5rem black;
	font-family: "Yellowtail";
  text-align: center; /* To center the text horizontally */
  width: 100%; /* Optionally, make the text container the full width of the image */
}

.photo {
  z-index: 1;
  opacity: 0.8;
  width: 100%;
  height: 600px;
  transform: scale(1);
  transition: opacity 800ms, transform 600ms;
  &:hover {
    transform: scale(1.3);
		z-index: 100;
    opacity: 1;
    transition: transform 600ms, opacity 2000ms;
  }
}

@media screen and (width <= 700px) {
  .img-container {
		width: 100vw;
  }
	.photogrid {
		padding-left: 0px;
		padding-right: 0px;
	}
	.photo {
		opacity: 1;
		&:hover {
			transform: scale(1);
	  }
	}
}

